--- a/T3grupoJavaULP/nbproject/project.properties
+++ b/T3grupoJavaULP/nbproject/project.properties
@@ -75,7 +75,7 @@ main.class=t3grupojavaulp.T3grupoJavaULP
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=OpenJDK_8
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
