--- a/T3grupoJavaULP/nbproject/project.properties
+++ b/T3grupoJavaULP/nbproject/project.properties
@@ -33,12 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/T3grupoJavaULP
 excludes=
-file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.0.11.jar=lib\\mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcalendar-1.4.jar}
