--- a/T3grupoJavaULP/nbproject/project.properties
+++ b/T3grupoJavaULP/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=T3grupoJavaULP
+application.vendor=ElGrupo22
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/T3grupoJavaULP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/T3grupoJavaULP
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.0.11.jar=lib\\mariadb-java-client-3.0.11.jar
@@ -39,9 +41,6 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
