--- a/T3grupoJavaULP/nbproject/project.properties
+++ b/T3grupoJavaULP/nbproject/project.properties
@@ -41,7 +41,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
