--- a/T3grupoJavaULP/nbproject/project.properties
+++ b/T3grupoJavaULP/nbproject/project.properties
@@ -77,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=T3grupoJavaULP
-main.class=t3grupojavaulp.T3grupoJavaULP
+main.class=t3grupojavaulp.Vistas.UniversidadVista
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
